vlib/v/checker/tests/interface_implementing_own_interface_method.out
vlib/v/checker/tests/interface_implementing_own_interface_method.vv:5:1: error: interface `Animal` cannot implement its own interface method `speak`
    3 | }
    4 | 
    5 | fn (a Animal) speak() {
      | ~~~~~~~~~~~~~~~~~~~~~
    6 |     println('speaking')
    7 | }
